--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,12 +27,36 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
+        android:id="@+id/iv_background"
         android:layout_width="194dp"
         android:layout_height="385dp"
         android:layout_margin="10dp"
         android:src="@mipmap/cake"
+        android:alpha="0"
         app:layout_constraintBottom_toTopOf="@+id/tv_title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <EditText
+        android:id="@+id/et_log"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:cursorVisible="true"
+        android:hint="write something for this moment:"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintTop_toTopOf="@+id/iv_background"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+    <ProgressBar
+        android:id="@+id/pb_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:visibility="invisible"
+        android:max="50"
+        android:progress="0"
+        app:layout_constraintTop_toTopOf="@+id/iv_background"
+        app:layout_constraintLeft_toLeftOf="@id/iv_background"
+        app:layout_constraintRight_toRightOf="@id/iv_background"
+        app:layout_constraintBottom_toBottomOf="@id/iv_background"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
